routes/httpbin-child-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-child
  namespace: httpbin
  labels:
    app: apis
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /httpbin/v1.0/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
    # This random matcher that does not exist in the parent causes a matcher for "/" to be created in Envoy.
    - matches:  
      - path:
          type: PathPrefix
          value: /random/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
