routes/httpbin-example-com-root-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-example-com-route
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "httpbin.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /httpbin/v1.0/
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httpbin-child
        namespace: httpbin
