routes/tracks-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tracks-apiproduct
  namespace: tracks
  labels:
    app: tracks-rest-api-1.0
  # annotations:
  #   delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /trackapi/v1.0/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: tracks
        namespace: tracks
